== 1.4

    New features:
    ------------
    + Configurable password policy;

    Enhancements, changes:
    ----------------------------
    + Circuits enhancements (Virtual Circuits);
    + Dropped support for 32bit systems;
    + PHP 5.4 is now required;
    + API:
        + Add Mac Search for Addresses controller (#2005);

    Bugfixes:
    ----------------------------
    + Fix appended " U" in Rack description (#2046);
    + Fix Bandwidth calculator - 400 Bad Request. (#1807);
    + API:
        + Fix inconsistant API success value returned (#2045);

== 1.3.2

    Enhancements, changes:
    ----------------------------
    + Dark theme added;
    + Full php7.2 compatibility;
    + url_rewrite has changed, please use new rewrite scheme (https://phpipam.net/news/new_rewrite_scheme/);
    + Search for matching subnet in all VRFs feature enabled when importing addresses;
    + Added new config option to show custom fields separated from standard fields when editing IP address;
    + Added Required fields subpage to define IP address fields that must be filled in;
    + Performance + bug fixes (#1660, #1657);
    + MasterSubnet dropdown list is dynamically generated via AJAX call;
    + Bandwidth calculator;
    + Support 8U rack sizes. (#1891);
    + API:
        + New last_subnet API calls (#1655);

    Translations:
    ----------------------------
    + German translation updated to verson 1.3.1;
    + French translations updated. (#1881);

    Bugfixes:
    ----------------------------
    + Fixed uncaught error if vlan number exceeds max permitted (#1455);
    + Fixed Illegal string offset 'dns_name' in pingCheck.php errors (#1461);
    + Performance fix for subnet_dropdown_print_available (#1562);
    + Fixed logo updater for apache v2.4 (#1582);
    + Fixed section names containing spaces are not included in exports (#1566);
    + Allow DNS wildcard records (#1571);
    + Fixed slow mac address vendor decoding for subnet detail view (#1658);